--- a/packages/map-template/src/components/LocationDetails/LocationDetails.scss
+++ b/packages/map-template/src/components/LocationDetails/LocationDetails.scss
@@ -66,6 +66,7 @@
         padding-bottom: 0.75rem;
         position: relative;
         z-index: 1;
+        scroll-padding-top: 56px;
         /* Hide scrollbar */
         scrollbar-width: none;
         &::-webkit-scrollbar {
