--- a/packages/map-template/src/components/Wayfinding/Wayfinding.scss
+++ b/packages/map-template/src/components/Wayfinding/Wayfinding.scss
@@ -167,6 +167,7 @@
 
     &__scrollable {
         overflow: auto;
+        scroll-padding-top: 56px;
     }
 
     &__error {
